--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <img
                 class="h-10 w-auto"
                 id="logo-image"
-                src="/image/logo-1.png"
+                src="image/logo-1.png"
                 alt="Logo"
               />
             </a>
@@ -535,7 +535,7 @@
             >
               <img
                 class="h-full max-w-full object-cover rounded-lg"
-                src="/image/bg.jpg"
+                src="image/bg.jpg"
                 alt=""
               />
             </div>
