--- a/index.html
+++ b/index.html
@@ -659,31 +659,31 @@
         >
           <img
             class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-            src="/image/logo.png"
+            src="image/logo.png"
             width="158"
             height="48"
           />
           <img
             class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-            src="/image/logo.png"
+            src="image/logo.png"
             width="158"
             height="48"
           />
           <img
             class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-            src="/image/logo.png"
+            src="image/logo.png"
             width="158"
             height="48"
           />
           <img
             class="col-span-2 max-h-12 w-full object-contain sm:col-start-2 lg:col-span-1"
-            src="/image/logo.png"
+            src="image/logo.png"
             width="158"
             height="48"
           />
           <img
             class="col-span-2 col-start-2 max-h-12 w-full object-contain sm:col-start-auto lg:col-span-1"
-            src="/image/logo.png"
+            src="image/logo.png"
             width="158"
             height="48"
           />
@@ -696,7 +696,7 @@
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
             <a href="#" class="flex items-center">
-              <img src="/image/logo-1.png" class="ml-3 mb-5 mt-5 w-40" alt="" />
+              <img src="image/logo-1.png" class="ml-3 mb-5 mt-5 w-40" alt="" />
             </a>
           </div>
           <div class="grid gap-8 sm:gap-8 grid-cols-2">
@@ -743,41 +743,5 @@
         </div>
       </div>
     </footer>
-
-    <script>
-      window.onscroll = function () {
-        const navbar = document.getElementById("navbar");
-        const navbarText = document.getElementsByClassName("navbar-text");
-        const logoImage = document.getElementById("logo-image");
-
-        if (window.scrollY > 50) {
-          navbar.classList.add("scrolled");
-          for (let index = 0; index < navbarText.length; index++) {
-            navbarText.item(index).className =
-              " navbar-text font-semibold leading-6 text-white text-scrolled ";
-          }
-          logoImage.src = "image/logo.png";
-        } else {
-          navbar.classList.remove("scrolled");
-          for (let index = 0; index < navbarText.length; index++) {
-            navbarText.item(index).className =
-              " navbar-text font-semibold leading-6 text-white ";
-          }
-          logoImage.src = "image/logo-1.png";
-        }
-      };
-
-      const openMenuButton = document.getElementById("open-menu-button");
-      const closeMenuButton = document.getElementById("close-menu-button");
-      const mobileMenu = document.getElementById("mobile-menu");
-
-      openMenuButton.addEventListener("click", () => {
-        mobileMenu.classList.remove("hidden-menu");
-      });
-
-      closeMenuButton.addEventListener("click", () => {
-        mobileMenu.classList.add("hidden-menu");
-      });
-    </script>
   </body>
 </html>
