--- a/index.html
+++ b/index.html
@@ -155,11 +155,10 @@
         <div class="mx-auto max-w-2xl py-32 sm:py-36 lg:py-40">
           <div class="hidden sm:mb-8 sm:flex sm:justify-center">
             <div
-              onclick="smoothScroll('content')"
               class="relative rounded-full px-3 py-1 text-sm leading-6 text-white hover:ring-white ring-1 ring-white hover:scale-110 transition ease-in-out duration-200"
             >
               Wisata seru tanpa ragu.
-              <a class="font-semibold text-lime-300"
+              <a class="font-semibold text-lime-300" href="#content"
                 ><span class="absolute inset-0" aria-hidden="true"></span>Baca
                 selengkapnya <span aria-hidden="true">&rarr;</span></a
               >
@@ -179,7 +178,7 @@
             </p>
             <div class="mt-10 flex items-center justify-center gap-x-6">
               <a
-                onclick="smoothScroll('content')"
+                href="#content"
                 class="rounded-md bg-[#72BF78] px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-[#61AE67] transition ease-in-out duration-500"
                 >Pelajari selengkapnya</a
               >
