--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     <div class="relative isolate py-28" id="content">
       <div
-        class="absolute -top-40 -z-[999] transform-gpu overflow-hidden blur-3xl sm:-top-100"
+        class="absolute top-0 -z-[999] transform-gpu overflow-hidden blur-3xl sm:-top-32"
         aria-hidden="true"
       >
         <div
